data/derived/comb/progs/unify/prog6308.ml.out
Characters 54-56:
  wwhile (f',b);;
          ^^
Error: This expression has type 'a -> bool
       but an expression was expected of type 'a -> 'a * bool
       Type bool is not compatible with type 'a * bool 
